--- a/index.html
+++ b/index.html
@@ -19,12 +19,47 @@
                 <li><a href="./pages/contact.html">CONTACT</a></li>
               </ul>
             </div>
+            <img
+              class="menu-burger"
+              src="./images/home/mobile/burger-button.png"
+              alt="menu"
+            />
           </div>
         </div>
       </nav>
+      <div class="hero">
+        <div class="container">
+          <div class="hero-content">
+            <img
+              src="./images/home/desktop/bg-pattern-hero-home.svg"
+              class="hero-shape"
+            />
+            <div class="hero-main">
+              <div class="hero-left-side">
+                <h2>
+                  Award-winning custom designs and digital branding solutions
+                </h2>
+                <p>
+                  With over 10 years in the industry, we are experienced in
+                  creating fully responsive websites, app design, and engaging
+                  brand experiences. Find out more about our services.
+                </p>
+                <div class="learn-more">
+                  <a href="#" class="btn-learn-more">Learn more</a>
+                </div>
+              </div>
+              <img
+                src="./images/home/desktop/image-hero-phone.png"
+                class="phone"
+                alt="phone"
+              />
+            </div>
+          </div>
+        </div>
+      </div>
     </header>
     <main></main>
-    <footer>
+    <!-- <footer>
       <div class="container">
         <div class="footer-content">
           <div class="footer-content-left-side">
@@ -34,11 +69,38 @@
               how our expertise can help your business grow.
             </p>
           </div>
-          <div class="footer-content-right-side">
-            <button class="get-in-touch">GET IN TOUCH</button>
+          <a class="get-in-touch">GET IN TOUCH</a>
+        </div>
+        <div class="footer-part">
+          <a href="index.html">
+            <img src="./images/home/desktop/designo-logo.png" alt="Designo" />
+          </a>
+          <div class="footer-part-menu">
+            <ul>
+              <li><a href="./pages/about.html">OUR COMPANY</a></li>
+              <li><a href="./pages/locations.html">LOCATIONS</a></li>
+              <li><a href="./pages/contact.html">CONTACT</a></li>
+            </ul>
+          </div>
+          <hr />
+          <div class="footer-part-adreess-menu">
+            <address>
+              <h2>Designo Central Office</h2>
+              <br />
+              3886 Wellington Street<br />
+              Toronto, Ontario M9C 3J5<br />
+            </address>
+          </div>
+          <section class="cotact-menu">
+            <h2>Contact us(Central Office)</h2>
+            <p>P :<a href="tel:+12538638967">+1 253-863-8967</a></p>
+            <p>M : <a href="contact@designo.com">contact@designo.co</a></p>
+          </section>
+          <div class="social-dashboards-menu">
+            <a href="#"><img src="./images/" alt="" /></a>
           </div>
         </div>
       </div>
-    </footer>
+    </footer> -->
   </body>
 </html>
