--- a/index.html
+++ b/index.html
@@ -58,7 +58,35 @@
         </div>
       </div>
     </header>
-    <main></main>
+    <main>
+      <section class="section1">
+        <div class="container">
+          <div class="section1-card">
+            <a href="./pages/web-design.html"
+              ><img
+                class="web-design-img"
+                src="./images/home/desktop/image-web-design-large.jpg"
+                alt="Web design"
+              />
+            </a>
+            <div class="section1-inside-card">
+              <a href="./pages/app-design.html"
+                ><img
+                  class="app-des-img"
+                  src="./images/home/desktop/image-app-design.jpg"
+                  alt="App design"
+              /></a>
+              <a href="./pages/graphic-design.html"
+                ><img
+                  class="Grap-des-img"
+                  src="./images/home/desktop/image-graphic-design.jpg"
+                  alt="Graphic design"
+              /></a>
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
     <!-- <footer>
       <div class="container">
         <div class="footer-content">
